src/objects/Legacy_Calculator_Data__c.object
<CustomObject>
    <description>Legacy Excel Calculator Data for Reporting</description>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Legacy Calculator Data</relationshipLabel>
        <relationshipName>Legacy_Calculators_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VP_30_Percent_Federal_Credit__c</fullName>
        <label>VP_30_Percent_Federal_Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Avg_Monthly_Cost__c</fullName>
        <label>VP_Actual_Avg_Monthly_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Avg_Monthly_KWH__c</fullName>
        <label>VP_Actual_Avg_Monthly_KWH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Apr__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Apr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Aug__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Aug</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Dec__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Dec</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Feb__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Feb</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Jan__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Jan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Jul__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Jul</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Jun__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Jun</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Mar__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Mar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_May__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_May</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Nov__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Nov</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Oct__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Oct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_Cost_Sep__c</fullName>
        <label>VP_Actual_Monthly_Bill_Cost_Sep</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Apr__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Apr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Aug__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Aug</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Dec__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Dec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Feb__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Feb</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Jan__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Jan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Jul__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Jul</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Jun__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Jun</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Mar__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Mar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_May__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_May</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Nov__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Nov</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Oct__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Oct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Monthly_Bill_KWH_Sep__c</fullName>
        <label>VP_Actual_Monthly_Bill_KWH_Sep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Yearly_KWH_Cost_Per_Month__c</fullName>
        <label>VP_Actual_Yearly_KWH_Cost_Per_Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Yearly_KWH_KWH_Per_Month__c</fullName>
        <label>VP_Actual_Yearly_KWH_KWH_Per_Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Actual_Yearly_KWH__c</fullName>
        <label>VP_Actual_Yearly_KWH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Additional_Commission_Special_Parts__c</fullName>
        <description>Additional Commission Special Parts</description>
        <inlineHelpText>Additional Commission Special Parts</inlineHelpText>
        <label>VP_Additional_Commission_Special_Parts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Address_Line_1__c</fullName>
        <label>VP_Address_Line_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Address_Line_2__c</fullName>
        <label>VP_Address_Line_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Annual_Yearly_KWH_Used__c</fullName>
        <label>VP_Annual_Yearly_KWH_Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Average_Old_Monthly_Bill__c</fullName>
        <label>VP_Average_Old_Monthly_Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_CA_All_Electric_After__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_CA_All_Electric_After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_CA_All_Electric_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_CA_All_Electric_Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_CA_Consumption_Profile_After__c</fullName>
        <label>VP_CA_Consumption_Profile_After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Consumption_Profile_Before__c</fullName>
        <label>VP_CA_Consumption_Profile_Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Electric_Vehicle_After__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_CA_Electric_Vehicle_After</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_CA_Electric_Vehicle_Before__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_CA_Electric_Vehicle_Before</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_CA_Home_Amp_After__c</fullName>
        <label>VP_CA_Home_Amp_After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Home_Amp_Before__c</fullName>
        <label>VP_CA_Home_Amp_Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Schedule_After__c</fullName>
        <label>VP_CA_Schedule_After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Schedule_Before__c</fullName>
        <label>VP_CA_Schedule_Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Territory_After__c</fullName>
        <label>VP_CA_Territory_After</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_CA_Territory_Before__c</fullName>
        <label>VP_CA_Territory_Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_City__c</fullName>
        <label>VP_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_County_Prop_Tax_Credit__c</fullName>
        <label>VP_County_Prop_Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_County__c</fullName>
        <label>VP_County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Customer_Name_1__c</fullName>
        <label>VP_Customer_Name_1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Customer_Name_2__c</fullName>
        <label>VP_Customer_Name_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Customer_Tax_Rate__c</fullName>
        <label>VP_Customer_Tax_Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Lease_Cents_Per_Watt__c</fullName>
        <description>VP_Discount_Lease_Cents_Per_Watt</description>
        <inlineHelpText>VP_Discount_Lease_Cents_Per_Watt</inlineHelpText>
        <label>VP_Discount_Lease_Cents_Per_Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Lease_Commission__c</fullName>
        <description>VP_Discount_Lease_Commission</description>
        <inlineHelpText>VP_Discount_Lease_Commission</inlineHelpText>
        <label>VP_Discount_Lease_Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Lease_Dollars__c</fullName>
        <description>VP_Discount_Lease_Dollars</description>
        <inlineHelpText>VP_Discount_Lease_Dollars</inlineHelpText>
        <label>VP_Discount_Lease_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Purchase_Cents_Per_Watt__c</fullName>
        <description>VP_Discount_Purchase_Cents_Per_Watt</description>
        <inlineHelpText>VP_Discount_Purchase_Cents_Per_Watt</inlineHelpText>
        <label>VP_Discount_Purchase_Cents_Per_Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Purchase_Commission__c</fullName>
        <description>VP_Discount_Purchase_Commission</description>
        <inlineHelpText>VP_Discount_Purchase_Commission</inlineHelpText>
        <label>VP_Discount_Purchase_Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Discount_Purchase_Dollars__c</fullName>
        <description>VP_Discount_Purchase_Dollars</description>
        <inlineHelpText>VP_Discount_Purchase_Dollars</inlineHelpText>
        <label>VP_Discount_Purchase_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Electricity_Rate__c</fullName>
        <label>VP_Electricity_Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Est_Monthly_Avg_Consumption_Dollars__c</fullName>
        <label>VP_Est_Monthly_Avg_Consumption_Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Facility_Type__c</fullName>
        <label>VP_Facility_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Incl_30_Pct_Fed_In_Purchase_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Incl_30_Pct_Fed_In_Purchase_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Incl_Cnty_Prop_Tax_In_Purchase_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Incl_Cnty_Prop_Tax_In_Purchase_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Incl_St_Income_Tax_Cr_In_Purch_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Incl_St_Income_Tax_Cr_In_Purch_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Incl_Utility_Inctv_In_Purchase_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Incl_Utility_Inctv_In_Purchase_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Include_State_Grant_In_Purchase_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Include_State_Grant_In_Purchase_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_KWH_In_Proposal__c</fullName>
        <label>VP_KWH_In_Proposal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_KWPriceTable_Territory_1_Calc_0__c</fullName>
        <label>VP_KWPriceTable_Territory_1_Calc_0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KWPriceTable_Territory_1_Calc_2_9__c</fullName>
        <label>VP_KWPriceTable_Territory_1_Calc_2_9</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KWPriceTable_Territory_2_Calc_0__c</fullName>
        <label>VP_KWPriceTable_Territory_2_Calc_0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KWPriceTable_Territory_2_Calc_2_9__c</fullName>
        <label>VP_KWPriceTable_Territory_2_Calc_2_9</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KWPriceTable_Territory_3_Calc_0__c</fullName>
        <label>VP_KWPriceTable_Territory_3_Calc_0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KWPriceTable_Territory_3_Calc_2_9__c</fullName>
        <label>VP_KWPriceTable_Territory_3_Calc_2_9</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KW_Lease_Mntly_Paymt_Inc_Tax__c</fullName>
        <label>VP_KW_Lease_Mntly_Paymt_Inc_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Discount_From_Prom__c</fullName>
        <description>VP_KilowattPriceTable_Discount_From_Promo</description>
        <inlineHelpText>VP_KilowattPriceTable_Discount_From_Promo</inlineHelpText>
        <label>VP_KilowattPriceTable_Discount_From_Prom</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_EPC_Price_Monthly__c</fullName>
        <description>VP_KilowattPriceTable_EPC_Price_Monthly</description>
        <inlineHelpText>VP_KilowattPriceTable_EPC_Price_Monthly</inlineHelpText>
        <label>VP_KilowattPriceTable_EPC_Price_Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_EPC_Price_Prepaid__c</fullName>
        <description>VP_KilowattPriceTable_EPC_Price_Prepaid</description>
        <inlineHelpText>VP_KilowattPriceTable_EPC_Price_Prepaid</inlineHelpText>
        <label>VP_KilowattPriceTable_EPC_Price_Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Mounting_Surcharge__c</fullName>
        <description>VP_KilowattPriceTable_Mounting_Surcharge</description>
        <inlineHelpText>VP_KilowattPriceTable_Mounting_Surcharge</inlineHelpText>
        <label>VP_KilowattPriceTable_Mounting_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_PPW_Monthly__c</fullName>
        <description>VP_KilowattPriceTable_PPW_Monthly</description>
        <inlineHelpText>VP_KilowattPriceTable_PPW_Monthly</inlineHelpText>
        <label>VP_KilowattPriceTable_PPW_Monthly</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_PPW_Prepaid__c</fullName>
        <description>VP_KilowattPriceTable_PPW_Prepaid</description>
        <inlineHelpText>VP_KilowattPriceTable_PPW_Prepaid</inlineHelpText>
        <label>VP_KilowattPriceTable_PPW_Prepaid</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Panel_Surcharge__c</fullName>
        <description>VP_KilowattPriceTable_Panel_Surcharge</description>
        <inlineHelpText>VP_KilowattPriceTable_Panel_Surcharge</inlineHelpText>
        <label>VP_KilowattPriceTable_Panel_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Size_Surcharge__c</fullName>
        <description>VP_KilowattPriceTable_Size_Surcharge</description>
        <inlineHelpText>VP_KilowattPriceTable_Size_Surcharge</inlineHelpText>
        <label>VP_KilowattPriceTable_Size_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Special_Parts_Surc__c</fullName>
        <description>VP_KilowattPriceTable_Special_Parts_Surcharge</description>
        <inlineHelpText>VP_KilowattPriceTable_Special_Parts_Surcharge</inlineHelpText>
        <label>VP_KilowattPriceTable_Special_Parts_Surc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Territory_1_Name__c</fullName>
        <label>VP_KilowattPriceTable_Territory_1_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Territory_2_Name__c</fullName>
        <label>VP_KilowattPriceTable_Territory_2_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Territory_3_Name__c</fullName>
        <label>VP_KilowattPriceTable_Territory_3_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Total_Surcharge__c</fullName>
        <description>VP_KilowattPriceTable_Total_Surcharge</description>
        <inlineHelpText>VP_KilowattPriceTable_Total_Surcharge</inlineHelpText>
        <label>VP_KilowattPriceTable_Total_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_KilowattPriceTable_Trenching_Surcharg__c</fullName>
        <description>VP_KilowattPriceTable_Trenching_Surcharge</description>
        <inlineHelpText>VP_KilowattPriceTable_Trenching_Surcharge</inlineHelpText>
        <label>VP_KilowattPriceTable_Trenching_Surcharg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_After_Tax_Initial_Payment__c</fullName>
        <label>VP_Kilowatt_After_Tax_Initial_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_After_Tax_Lease_Elect_Rate__c</fullName>
        <label>VP_Kilowatt_After_Tax_Lease_Elect_Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Combined_Monthly_Bill__c</fullName>
        <label>VP_Kilowatt_Combined_Monthly_Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Down_Payment__c</fullName>
        <label>VP_Kilowatt_Down_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Lease_Elec_rate__c</fullName>
        <label>VP_Kilowatt_Lease_Elec_rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Lease_Escalator__c</fullName>
        <label>VP_Kilowatt_Lease_Escalator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Lease_Monthly_Payment__c</fullName>
        <label>VP_Kilowatt_Lease_Monthly_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Lease_Term__c</fullName>
        <label>VP_Kilowatt_Lease_Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Lifetime_Sales_Tax__c</fullName>
        <label>VP_Kilowatt_Lifetime_Sales_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Prepay_Amt_After_Tax__c</fullName>
        <label>VP_Kilowatt_Prepay_Amt_After_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Prepay_Amt__c</fullName>
        <label>VP_Kilowatt_Prepay_Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Kilowatt_Total_Payments_Over_Lease__c</fullName>
        <label>VP_Kilowatt_Total_Payments_Over_Lease</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Lease_Contract_Type__c</fullName>
        <label>VP_Lease_Contract_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Lease_Fund_Choice_Monthly__c</fullName>
        <description>Lease Fund Choice Monthly</description>
        <inlineHelpText>Lease Fund Choice Monthly</inlineHelpText>
        <label>VP_Lease_Fund_Choice_Monthly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Lease_Fund_Choice_Prepaid__c</fullName>
        <description>Lease Fund Choice Prepaid</description>
        <inlineHelpText>Lease Fund Choice Prepaid</inlineHelpText>
        <label>VP_Lease_Fund_Choice_Prepaid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Lease_Sales_Tax__c</fullName>
        <label>VP_Lease_Sales_Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VP_Manual_Override_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Manual_Override_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Manual_Override_Utility_Cost__c</fullName>
        <label>VP_Manual_Override_Utility_Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_Model_Version__c</fullName>
        <description>Calculator Model Version</description>
        <inlineHelpText>Calculator Model Version</inlineHelpText>
        <label>VP_Model_Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_Moderate_HV_Adder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Moderate_HV_Adder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Moderate_Income_Adder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VP_Moderate_Income_Adder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VP_Monthly_Bill_Method__c</fullName>
        <label>VP_Monthly_Bill_Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Discount_From_Promo__c</fullName>
        <description>VP_NRGPriceTable_Discount_From_Promo</description>
        <inlineHelpText>VP_NRGPriceTable_Discount_From_Promo</inlineHelpText>
        <label>VP_NRGPriceTable_Discount_From_Promo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_EPC_Price_Monthly__c</fullName>
        <description>VP_NRGPriceTable_EPC_Price_Monthly</description>
        <inlineHelpText>VP_NRGPriceTable_EPC_Price_Monthly</inlineHelpText>
        <label>VP_NRGPriceTable_EPC_Price_Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_EPC_Price_Prepaid__c</fullName>
        <description>VP_NRGPriceTable_EPC_Price_Prepaid</description>
        <inlineHelpText>VP_NRGPriceTable_EPC_Price_Prepaid</inlineHelpText>
        <label>VP_NRGPriceTable_EPC_Price_Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Mounting_Surcharge__c</fullName>
        <description>VP_NRGPriceTable_Mounting_Surcharge</description>
        <inlineHelpText>VP_NRGPriceTable_Mounting_Surcharge</inlineHelpText>
        <label>VP_NRGPriceTable_Mounting_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_PPW_Monthly__c</fullName>
        <description>VP_NRGPriceTable_PPW_Monthly</description>
        <inlineHelpText>VP_NRGPriceTable_PPW_Monthly</inlineHelpText>
        <label>VP_NRGPriceTable_PPW_Monthly</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_PPW_Prepaid__c</fullName>
        <description>VP_NRGPriceTable_PPW_Prepaid</description>
        <inlineHelpText>VP_NRGPriceTable_PPW_Prepaid</inlineHelpText>
        <label>VP_NRGPriceTable_PPW_Prepaid</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Panel_Surcharge__c</fullName>
        <description>VP_NRGPriceTable_Panel_Surcharge</description>
        <inlineHelpText>VP_NRGPriceTable_Panel_Surcharge</inlineHelpText>
        <label>VP_NRGPriceTable_Panel_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Size_Surcharge__c</fullName>
        <description>VP_NRGPriceTable_Size_Surcharge</description>
        <inlineHelpText>VP_NRGPriceTable_Size_Surcharge</inlineHelpText>
        <label>VP_NRGPriceTable_Size_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Special_Parts_Surcharge__c</fullName>
        <description>VP_NRGPriceTable_Special_Parts_Surcharge</description>
        <inlineHelpText>VP_NRGPriceTable_Special_Parts_Surcharge</inlineHelpText>
        <label>VP_NRGPriceTable_Special_Parts_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_1_Calc_0__c</fullName>
        <label>VP_NRGPriceTable_Territory_1_Calc_0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_1_Calc_2_9__c</fullName>
        <label>VP_NRGPriceTable_Territory_1_Calc_2_9</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_1_Name__c</fullName>
        <label>VP_NRGPriceTable_Territory_1_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_2_Calc_0__c</fullName>
        <label>VP_NRGPriceTable_Territory_2_Calc_0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_2_Calc_2_9__c</fullName>
        <label>VP_NRGPriceTable_Territory_2_Calc_2_9</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_2_Name__c</fullName>
        <label>VP_NRGPriceTable_Territory_2_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_3_Calc_0__c</fullName>
        <label>VP_NRGPriceTable_Territory_3_Calc_0</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_3_Calc_2_9__c</fullName>
        <label>VP_NRGPriceTable_Territory_3_Calc_2_9</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Territory_3_Name__c</fullName>
        <label>VP_NRGPriceTable_Territory_3_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Total_Surcharge__c</fullName>
        <description>VP_NRGPriceTable_Total_Surcharge</description>
        <inlineHelpText>VP_NRGPriceTable_Total_Surcharge</inlineHelpText>
        <label>VP_NRGPriceTable_Total_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRGPriceTable_Trenching_Surcharge__c</fullName>
        <description>VP_NRGPriceTable_Trenching_Surcharge</description>
        <inlineHelpText>VP_NRGPriceTable_Trenching_Surcharge</inlineHelpText>
        <label>VP_NRGPriceTable_Trenching_Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_After_Tax_Initial_Payment__c</fullName>
        <label>VP_NRG_After_Tax_Initial_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_After_Tax_Lease_Elect_Rate__c</fullName>
        <label>VP_NRG_After_Tax_Lease_Elect_Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Combined_Monthly_Bill__c</fullName>
        <label>VP_NRG_Combined_Monthly_Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Down_Payment__c</fullName>
        <label>VP_NRG_Down_Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VP_NRG_Lease_Elec_rate__c</fullName>
        <label>VP_NRG_Lease_Elec_rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
</CustomObject>